# quad_pos_ctrl

./: .gitignore  CMakeLists.txt  README.md  package.xml
ctrl_msg/: CMakeLists.txt  package.xml
ctrl_msg/msg/: ctrl_ref.msg
ctrl_msg/srv/: SetArm.srv
include/: PID_ctrl.h  controller.h  geometry_math_type.h  lowpass_filter.h  mavros_interface.h  sliding_differentiation.h  state_estimate.h  state_estimate_vio.h
launch/: UAV1_DIY250_controller.launch  UAV2_DIY250_controller.launch  UAV3_DIY250_controller.launch  UAV3_controller.launch  UAV4_DIY250_controller.launch  UAV5_DIY250_controller.launch  UAV5_F450_controller.launch  VIOUAV1_controller.launch  gazebo_takeoff_test.launch
launch/rviz/: gazebo_rviz.rviz  rviz.launch
msg/: factors.msg  segments.msg  trajectorys.msg
quad_pos_ctrl/: CMakeLists.txt  nodelet_plugins.xml  package.xml
quad_pos_ctrl/include/: CtrlNodeletClass.h  PID_ctrl.h  controller.h  dji_interface.h  mavros_interface.h  state_estimate_vio.h
quad_pos_ctrl/launch/: UAV5_F450_controller.launch  VIOUAV1_controller.launch  ctrl_nodelet.launch  gazebo_sim.launch  gazebo_sim2.launch  vio_test_takeoff.launch
quad_pos_ctrl/launch/rviz/: formation_test1.rviz
quad_pos_ctrl/logger/UAV_1/: PID_logger2020_09_22_15_33_57.csv  PID_logger2020_09_22_15_43_54.csv  PID_logger2020_09_22_16_24_39.csv  PID_logger2020_09_22_16_37_04.csv  PID_logger2020_09_22_16_40_22.csv  ctrl_logger2020_09_22_15_34_11.csv  ctrl_logger2020_09_22_15_44_06.csv  ctrl_logger2020_09_22_16_24_54.csv  ctrl_logger2020_09_22_16_37_22.csv  ctrl_logger2020_09_22_16_40_37.csv
quad_pos_ctrl/src/: CtrlNodeletClass.cpp  controller.cpp  quad_pos_ctrl_node.cpp
quad_pos_ctrl/src/logger/UAV_1/: PID_logger2020_02_12_14_21_11.csv  PID_logger2020_02_12_16_27_06.csv  PID_logger2020_02_12_16_30_46.csv  PID_logger2020_02_12_16_36_26.csv  PID_logger2020_02_12_16_41_11.csv  ctrl_logger2020_02_12_14_21_07.csv  ctrl_logger2020_02_12_16_27_02.csv  ctrl_logger2020_02_12_16_30_43.csv  ctrl_logger2020_02_12_16_36_22.csv  ctrl_logger2020_02_12_16_41_07.csv
quad_pos_ctrl/test/: test_takeoff_node.cpp  test_takeoff_node2.cpp  test_takeoff_node3.cpp  test_takeoff_node4.cpp
src/: PID_ctrl.h  controller.cpp  controller.h  diff_intigral_cal.h  geometry_math_type.h  mavros_interface.h  quad_pos_ctrl_node.cpp  state_estimate.h  test_pub_node.cpp
src/logger/: log_plot.py  log_plot_xyz.py  log_rm.sh
srv/: SetHover.srv
test/: linear_optimal_formation_test.cpp  linear_optimal_test.cpp  nonlinear_optimal_test2.cpp  test_sample_mocap.cpp  test_takeoff_node.cpp  test_takeoff_node2.cpp  test_takeoff_node3.cpp  test_takeoff_node4.cpp
test/logger/: log_plot.py  mocap_data.csv  mocap_data3.csv
